--- a/components/checkbox-input.html
+++ b/components/checkbox-input.html
@@ -284,9 +284,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3" data-path="draggable-list.md">
+        <li class="chapter " data-level="1.4.3" data-path="draggable-list.html">
             
-                <span>
+                <a href="draggable-list.html">
             
                     
                     Draggable List
@@ -362,9 +362,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9" data-path="match-list-question.md">
+        <li class="chapter " data-level="1.4.9" data-path="match-list-question.html">
             
-                <span>
+                <a href="match-list-question.html">
             
                     
                     Match List Question
@@ -375,9 +375,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10" data-path="multiple-choice-question.md">
+        <li class="chapter " data-level="1.4.10" data-path="multiple-choice-question.html">
             
-                <span>
+                <a href="multiple-choice-question.html">
             
                     
                     Multiple Choice Question
@@ -459,9 +459,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13" data-path="r-output.md">
+        <li class="chapter " data-level="1.4.13" data-path="r-output.html">
             
-                <span>
+                <a href="r-output.html">
             
                     
                     R Output
@@ -485,9 +485,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15" data-path="r-table.md">
+        <li class="chapter " data-level="1.4.15" data-path="r-table.html">
             
-                <span>
+                <a href="r-table.html">
             
                     
                     R Table
@@ -683,7 +683,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"next":{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},"previous":{"title":"Dashboard","level":"1.4.2","depth":2,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},{"title":"Select Input","level":"1.4.2.3","depth":3,"path":"components/select-input.md","ref":"components/select-input.md","articles":[]},{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},{"title":"Text Input","level":"1.4.2.5","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/checkbox-input.md","mtime":"2016-09-27T14:11:18.883Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:25:14.166Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"next":{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},"previous":{"title":"Dashboard","level":"1.4.2","depth":2,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},{"title":"Select Input","level":"1.4.2.3","depth":3,"path":"components/select-input.md","ref":"components/select-input.md","articles":[]},{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},{"title":"Text Input","level":"1.4.2.5","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/checkbox-input.md","mtime":"2016-09-27T14:11:18.883Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:28:37.486Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
