--- a/components/text-input.html
+++ b/components/text-input.html
@@ -57,7 +57,7 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="draggable-list.md" />
+    <link rel="next" href="draggable-list.html" />
     
     
     <link rel="prev" href="slider-input.html" />
@@ -284,9 +284,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3" data-path="draggable-list.md">
+        <li class="chapter " data-level="1.4.3" data-path="draggable-list.html">
             
-                <span>
+                <a href="draggable-list.html">
             
                     
                     Draggable List
@@ -362,9 +362,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9" data-path="match-list-question.md">
+        <li class="chapter " data-level="1.4.9" data-path="match-list-question.html">
             
-                <span>
+                <a href="match-list-question.html">
             
                     
                     Match List Question
@@ -375,9 +375,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10" data-path="multiple-choice-question.md">
+        <li class="chapter " data-level="1.4.10" data-path="multiple-choice-question.html">
             
-                <span>
+                <a href="multiple-choice-question.html">
             
                     
                     Multiple Choice Question
@@ -459,9 +459,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13" data-path="r-output.md">
+        <li class="chapter " data-level="1.4.13" data-path="r-output.html">
             
-                <span>
+                <a href="r-output.html">
             
                     
                     R Output
@@ -485,9 +485,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15" data-path="r-table.md">
+        <li class="chapter " data-level="1.4.15" data-path="r-table.html">
             
-                <span>
+                <a href="r-table.html">
             
                     
                     R Table
@@ -672,7 +672,7 @@
                 </a>
                 
                 
-                <a href="draggable-list.md" class="navigation navigation-next " aria-label="Next page: Draggable List">
+                <a href="draggable-list.html" class="navigation navigation-next " aria-label="Next page: Draggable List">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -683,7 +683,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Text Input","level":"1.4.2.5","depth":3,"next":{"title":"Draggable List","level":"1.4.3","depth":2,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},"previous":{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text-input.md","mtime":"2016-11-11T08:24:11.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:25:14.166Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Text Input","level":"1.4.2.5","depth":3,"next":{"title":"Draggable List","level":"1.4.3","depth":2,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},"previous":{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text-input.md","mtime":"2016-11-11T08:24:11.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:28:37.486Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
